# homepage

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  index.html  rust-toolchain.toml
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: cargo-deny.yml  checks.yaml  codeql.yaml  release.yaml  sbom.yaml  trivy.yaml
public/: robots.txt  sitemap.xml
src/: app.rs  lib.rs  main.rs
src/components/: background.rs  common.rs  contact.rs  hero.rs  links.rs  mod.rs  services.rs
src/styles/: style.css  tailwind.css
